--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@fortawesome/react-fontawesome": "^0.1.3",
     "csh-material-bootstrap": "^4.0.0-beta.3",
     "react": "^16.6.0",
+    "react-autosuggest": "^9.4.3",
     "react-dom": "^16.6.0",
     "react-scripts": "2.0.5",
     "reactstrap": "^6.5.0"
